<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.UpdateNoteActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingHorizontal="12dp"
        android:paddingVertical="8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="Add Note" />


        <EditText
            android:id="@+id/cid_input2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            style="@style/et_style"
            android:ems="5"
            android:hint="Customer ID"
        />

        <EditText
            android:id="@+id/event_input2"
            android:layout_width="match_parent"
            style="@style/et_style"
            android:ems="5"
            android:hint="@string/event"
            />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/et_date"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="@string/date"
                style="@style/et_style"
                android:layout_marginBottom="0dp"
                />


            <Button
                android:id="@+id/birthday_choose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Choose Birthday"
                android:textSize="15sp"
                android:paddingHorizontal="8dp" />

        </LinearLayout>


        <EditText
            android:id="@+id/type_input2"
            android:layout_width="match_parent"
            android:hint="@string/event_type"
            style="@style/et_style" />


        <EditText
            android:id="@+id/note_input2"
            android:layout_width="match_parent"
            style="@style/et_style"
            android:ems="10"
            android:hint="@string/note"
            android:layout_height="200dp"
           />

        <Button
            android:id="@+id/add_button2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/save"
            style="@style/et_style"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@color/purple_500"/>

        <Button
            android:id="@+id/delete_button"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="Delete"
            style="@style/et_style"
            android:textColor="@color/white"
            android:background="@android:color/holo_red_dark"
            android:layout_marginTop="8dp"
            android:gravity="center"/>
    </LinearLayout>








</androidx.constraintlayout.widget.ConstraintLayout>